--- a/css/cube.css
+++ b/css/cube.css
@@ -57,3 +57,12 @@ body {
     background-image: url('../images/Tom und Mikael.jpg');
     background-size: contain;
 }
+
+.face.right{
+    background-image: url('../images/caballo.JPG');
+    background-size: contain;
+}
+.face.back{
+    background-image: url('../images/feet.JPG');
+    background-size: contain;
+}
