--- a/css/forcube.css
+++ b/css/forcube.css
@@ -7,5 +7,35 @@ and open the template in the editor.
     Created on : Feb 25, 2015, 3:59:30 PM
     Author     : felix
 */
+.container {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  perspective: 100; }
+
+.cube {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d; }
+  .cube figure {
+    width: 196px;
+    height: 196px;
+    display: block;
+    position: absolute;
+    border: 2px solid black;
+    opacity: 0.5; }
+  .cube .front {
+    transform: rotateY(0deg) translateZ(100px); }
+  .cube .back {
+    transform: rotateX(180deg) translateZ(100px); }
+  .cube .right {
+    transform: rotateY(90deg) translateZ(100px); }
+  .cube .left {
+    transform: rotateY(-90deg) translateZ(100px); }
+  .cube .top {
+    transform: rotateX(90deg) translateZ(100px); }
+  .cube .bottom {
+    transform: rotateX(-90deg) translateZ(100px); }
 
 /*# sourceMappingURL=forcube.css.map */
